--- a/Oblikovanje-Teksta/Oblikovanje-Teksta.html
+++ b/Oblikovanje-Teksta/Oblikovanje-Teksta.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="stil.css">
+
+    <h1>Oblikovanje teksta</h1>
+
+    <div class="kartica">
+
+        <h2>Font i veličina</h2>
+        <p class="font">ovaj tekst prikazuje font family i font size svojstvo</p>
+
+
+    </div>
+
 </head>
 <body>
     
